--- a/sitio/scss/layout/_grid.scss
+++ b/sitio/scss/layout/_grid.scss
@@ -1,10 +1,16 @@
-@media (max-width: 320px) and (min-width: 480px){}
+@media (max-width: 320px) and (min-width: 480px){
+    
+}
 
 
 
 
 
 @media (max-width: 481px) and (min-width: 768px){
+    .seccion-noticias{display: flex;
+        justify-content: center;
+        text-align: center;
+        width: 100%;}
 
 }
 
